infrastructure/bootstrap/infrastructure/prometheus/controller/base/kube-state-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: rig-system
spec:
  type: ClusterIP
  selector:
    app: kube-state-metrics
  ports:
    - port: 8080
      targetPort: 8080
      name: http-metrics
    - port: 8081
      targetPort: 8081
      name: telemetry
