infrastructure/bootstrap/infrastructure/prometheus/controller/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: rig-system
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
      name: http
