infrastructure/bootstrap/infrastructure/prometheus/controller/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: rig-system
  annotations:
    cert-manager.io/cluster-issuer: kind-ca-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.kind
      http:
        paths:
          - backend:
              service:
                name: prometheus
                port:
                  number: 9090
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - prometheus.kind
      secretName: prometheus-tls
